--- a/Fallout/utilities/blank.html
+++ b/Fallout/utilities/blank.html
@@ -8,16 +8,8 @@
 
   </head>
   <body>
-    <div class="buttonpannel">
-      <button type="button" name="button" class="redglow" onclick="location.href='../index.html';"></button><span class=buttontext>Main Menu</span>
-      </br>
-      <button type="button" name="button" class="redglow" onclick="location.href='utilities/blank.html';"></button><span class=buttontext>Test Page</span>
-      </br>
-      <button type="button" name="button" class="redglow"></button><span class=buttontext>testing</span>
-      </br>
-      <button type="button" name="button" class="redglow"></button><span class=buttontext>testing</span>
-      </br>
-      <button type="button" name="button" class="redglow"></button><span class=buttontext>testing</span>
+    <div id="buttonpannel" class="buttonpannel">
+
     </div>
     <div id="date">
       <span id="day"></span>
@@ -31,6 +23,9 @@
       <script src="../pipnav2.js"></script>
     </div>
     <div class="screen">
+      <div class="contentwindow">
+
+      </div>
     </div>
   </body>
 </html>
