--- a/Fallout/world/BOS.html
+++ b/Fallout/world/BOS.html
@@ -23,12 +23,14 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
-      <h1>The Brotherhood of Steel</h1>
+      <div class="contentwindow">
+        <h1>The Brotherhood of Steel</h1>
       <p><figure><img src="../img/BOS.webp" style="width:100%"><figcaption>Brotherhood of Steel Emblem</figcaption></figure>The Brotherhood of Steel has established a strong presence in the western United States, with a focus on research, technology, and advanced weaponry. The Brotherhood has formed an alliance with the NCR, sharing its knowledge and expertise in exchange for access to the republic's resources and technology.</p>
       <p>Under the leadership of Elder Maxson, the Brotherhood has expanded its operations and established several research and development facilities throughout the NCR. These facilities are focused on developing new technologies and weapons, as well as conducting research on pre-war technology and history.</p>
       <p>The Brotherhood also maintains a strong military force, with highly trained soldiers and specialized units such as knights, paladins, and scribes. The Brotherhood's soldiers are equipped with advanced weapons and armor, including power armor, laser weapons, and plasma rifles.</p>
       <p>In terms of infrastructure, the Brotherhood has established a network of bunkers and fortresses throughout the NCR, as well as several airbases and military outposts. The Brotherhood also has its own transportation system, including vertibirds and armored vehicles.</p>
       <p>The current leader of the Brotherhood of Steel is Elder Maxson, a charismatic and respected leader who has overseen the organization's expansion and collaboration with the NCR. Maxson is a strong believer in the Brotherhood's mission to protect humanity and safeguard advanced technology, and he has emphasized the importance of working with other factions to achieve these goals.</p>
+    </div>
     </div>
   </body>
 </html>
