--- a/Fallout/world/ENC.html
+++ b/Fallout/world/ENC.html
@@ -23,11 +23,13 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Enclave</h1>
       <p><figure><img src="../img/ENC.webp" style="width:100%"><figcaption>Enclave Seal</figcaption></figure>The Enclave has suffered a major setback with the rise of the NCR, and has been forced to retreat and rebuild. The Enclave is now operating from a remote, underground facility hidden away from the prying eyes of the NCR.</p>
       <p>The current leader of the Enclave in this timeline is a hard-line military figure known only as "The General." He has taken control of the remaining Enclave forces and is focused on rebuilding the organization's military and technological capabilities.</p>
       <p>In terms of infrastructure, the Enclave has a limited industrial capacity, relying primarily on salvaged technology and resources to maintain their operations. They are focused on developing new technologies and weapons to combat the NCR and other potential threats.</p>
       <p>The Enclave has a smaller, more agile force than in the original timeline, relying on guerrilla warfare tactics to disrupt NCR operations. They are a dangerous foe, with a focus on advanced technology and tactics to overcome their larger, more powerful adversaries.</p>
     </div>
+  </div>
   </body>
 </html>
