--- a/Fallout/world/GOR.html
+++ b/Fallout/world/GOR.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Tribe of Goris</h1>
       <p><figure><img src="../img/GOR.webp" style="width:100%"><figcaption>The Tribe of Goris Mark</figcaption></figure>After their initial encounter with the Chosen One and the defeat of the Enclave, the deathclaws of Vault 13 began to explore their newfound intelligence and abilities. They formed a close-knit community within the vault, and began to experiment with new technologies and innovations that they had learned from the Chosen One and their travels.</p>
       <p>As the years went by, the Tribe of Goris grew in both size and power. They became renowned for their intelligence, strength, and loyalty, and formed close alliances with many factions throughout the wasteland.</p>
@@ -33,6 +34,7 @@
       <p>These families were able to bridge the gap between the two species culturally, and physically. A few rare mutations found in both the human and deathclaw species allowed these mutants to reproduce, hybridizing the two species. The hybrids bore the best traits of both humans and deathclaws, though were exceptionally rare and were unable to reproduce themselves. Deathclaws saw the hybrids as just another claw, though the human members were often disturbed by the more humanlike physical and mental traits hybrids possessed.</p>
       <p>Despite facing many challenges, the hybrids played an important role in the Tribe of Goris’ success.They became skilled hunters, warriors, and craftsmen, and helped to develop new technologies and innovations that benefited the entire tribe. They were also far more adept at speaking human languages than the other intelligent deathclaws, allowing them to be great diplomats.</p>
       <p>Over time, the human-deathclaw hybrids became an integral part of the Tribe of Goris, and were seen as an important bridge between the deathclaws and the humans of the wasteland. They were able to break down barriers and stereotypes, and showed that cooperation and mutual respect could lead to a brighter future for all.</p>
+    </div>
     </div>
   </body>
 </html>
