--- a/Fallout/world/Hawaii.html
+++ b/Fallout/world/Hawaii.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Kingdom of Hawaii</h1>
       <p><figure><img src="../img/Hawaii.webp" style="width:100%"><figcaption>Kingdom of Hawaii Emblem</figcaption></figure>The Kingdom of Hawaii is a remote tropical paradise, untouched by nuclear devastation, but incapable of maintaining pre-war infrastructure without the support of the mainland USA. In recent years, it has made contact with NCR, who’s technological advancements and dedication to rebuilding the wasteland greatly assisted Hawaii with their rebuilding efforts. As a result, Hawaii has a greater focus on sustainability and environmental protection than most of the wasteland’s nations.</p>
       <p>The current leader of the Kingdom of Hawaii in this timeline is Queen Liliuokalani, who, with the help of the NCR, has managed to regain control of the islands from the U.S. government. She is known for her commitment to social justice and environmentalism, and has made significant strides in reducing Hawaii's carbon footprint and protecting its natural resources.</p>
@@ -30,5 +31,6 @@
       <p>The industrial capacity of Hawaii has also increased significantly in this timeline, with the NCR providing technological expertise and resources to help the state build advanced manufacturing facilities and research institutions. Hawaii has become a hub for renewable energy research and development, with new breakthroughs in energy storage and efficiency.</p>
       <p>In terms of military base, Hawaii has a significant naval presence, with the NCR and other allied nations using the islands as a strategic location for military operations in the Pacific. The Kingdom of Hawaii also has its own military, focused primarily on defending its sovereignty and protecting its citizens from threats both external and internal.</p>
     </div>
+  </div>
   </body>
 </html>
