--- a/Fallout/world/ISS.html
+++ b/Fallout/world/ISS.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Republic of Texas</h1>
       <p>The Issaquah Nation is a faction located in the Pacific Northwest region of the former United States. Led by a council of tribal elders, the Issaquah Nation is a confederation of Native American tribes that have come together to rebuild their ancestral lands.</p>
       <p>The Issaquah Nation's industrial base is focused on agriculture and traditional crafts. They have a strong farming industry and are skilled at weaving baskets and crafting pottery, which they use for trade with other factions. They also possess some manufacturing capabilities, but these are limited compared to the other factions.</p>
@@ -31,5 +32,6 @@
       <p>The council of tribal elders is the governing body of the Issaquah Nation, and is responsible for making important decisions and setting policies for the faction. They are highly respected by the Issaquah Nation's citizens and are known for their commitment to preserving their cultural heritage and way of life.</p>
       <p>Overall, the Issaquah Nation is a proud and self-sufficient faction that values their cultural traditions above all else. While they may not have the advanced technology or military might of some of the other factions, their knowledge of the land and their traditional skills make them a valuable ally for any group that seeks to survive in the harsh world of the wasteland.</p>
     </div>
+  </div>
   </body>
 </html>
