--- a/Fallout/world/KAH.html
+++ b/Fallout/world/KAH.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Great Kahns</h1>
       <p><figure><img src="../img/KAH.webp" style="width:100%"><figcaption>Great Kahns Tag</figcaption></figure>The Great Kahns are a faction located in the southwestern region of the former United States. Originally a raider group, they were reformed after the events of the second Battle of Hoover Dam, and have since become a powerful force in the region. The Great Kahns are now led by a chieftain named Darion, who is known for his tactical genius and charisma.</p>
       <p>The Great Kahns' industrial base is focused on scavenging and raiding. They have a well-established network of scouts and raiding parties that search the wasteland for valuable resources and technology. They are particularly skilled at salvaging pre-war military equipment, which they use to outfit their warriors.</p>
@@ -30,5 +31,6 @@
       <p>The Great Kahns' military forces are composed of well-trained warriors who are equipped with advanced weapons and armor. They are known for their ferocity in battle and are feared by many of their enemies. The Great Kahns also have a small but highly skilled group of snipers and scouts who provide valuable intelligence on their enemies.</p>
       <p>Under Darion's leadership, the Great Kahns have become a formidable faction that is respected by many of their neighbors. While they may not have the same level of technological advancement as some of the other factions, their tactical prowess and military might make them a force to be reckoned with in the wasteland.</p>
     </div>
+  </div>
   </body>
 </html>
