--- a/Fallout/world/LEG.html
+++ b/Fallout/world/LEG.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>Caesar's Legion</h1>
       <p><figure><img src="../img/LEG.webp" style="width:100%"><figcaption>Caesar's Legion Banner</figcaption></figure>With the defeat of the Legion in the Mojave, the once-mighty faction splintered into smaller groups, each vying for power and control over their own territories.</p>
       <p>One such group was led by a former centurion who refused to abandon the principles of the Legion, and instead sought to rebuild the faction's strength and influence from the ground up. He and his followers traveled eastward, into the ruins of what was once the state of Illinois. There, they encountered other groups of survivors, and after a series of brutal battles and skirmishes, the Legion's centurion emerged victorious, his forces augmented by new recruits and fresh slaves.</p>
@@ -32,5 +33,6 @@
       <p>The Legion's centurion, recognizing the threat posed by the resistance, launched a massive campaign to crush them. In a series of brutal battles, the Legion emerged victorious, but at a heavy cost. The centurion himself was killed in the final battle, leaving the Legion without a strong leader to guide them.</p>
       <p>In the aftermath of the conflict, the Legion fractured once again, with various factions vying for power and control over the region. However, the legacy of the centurion and the ideals of the Legion continued to live on, inspiring some to continue the fight for a unified, stable wasteland, while others rejected the Legion's methods and sought to forge a new path forward.</p>
     </div>
+  </div>
   </body>
 </html>
