--- a/Fallout/world/MOJ.html
+++ b/Fallout/world/MOJ.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Mojave</h1>
       <p><figure style="width:50%"><img src="../img/Mojavemap.webp" style="width:100%"><figcaption>The Mojave</figcaption></figure>After the conflict with the New California Republic and Ceaser’s Legion, the Mojave Wasteland underwent a significant transformation. The NCR established a permanent military presence in the region, with a number of large bases and settlements built throughout the Mojave.</p>
       <p>Under the leadership of President Kimball, the NCR focused their efforts on rebuilding and improving the infrastructure of the region. They invested heavily in the development of new technologies, particularly those related to renewable energy and sustainable agriculture, in an effort to make the Mojave a more livable place.</p>
@@ -30,5 +31,6 @@
       <p>Over time, the Mojave became a more prosperous and stable region. Trade routes were established between the NCR and other settlements throughout the wasteland, leading to a significant increase in commerce and economic activity.</p>
       <p>Despite becoming a provence of the NCR, tensions continued to simmer between the NCR and other factions in the Mojave, particularly the Followers of the Apocalypse and the Strip. These groups resisted NCR authority and continued to pursue their own agendas, often coming into conflict with NCR forces.</p>
     </div>
+  </div>
   </body>
 </html>
