--- a/Fallout/world/PIT.html
+++ b/Fallout/world/PIT.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Pit</h1>
       <p><figure><img src="../img/PITT.webp" style="width:100%"><figcaption>The Pit Seal</figcaption></figure>The Pitt is a faction located in the ruins of Pittsburgh, Pennsylvania. Led by an Overboss who rules through strength and cunning, The Pitt is a brutal and unforgiving place where the strong survive and the weak are exploited.</p>
       <p>The Pitt's industrial base is focused on manufacturing and resource extraction. They possess advanced foundries and factories that allow them to produce large quantities of steel and other materials. They also control many mines and have a thriving slave trade, with captured raiders and outsiders forced to work in their mines and factories.</p>
@@ -30,5 +31,6 @@
       <p>The Pitt's military forces are composed of ruthless raiders who are highly skilled in combat and guerrilla tactics. They are known for their brutality and willingness to do whatever it takes to achieve their goals. They also possess a number of crude but effective weapons, such as homemade explosives and flamethrowers.</p>
       <p>The Overboss is the ultimate authority in The Pitt, and is responsible for maintaining order and protecting the faction's interests. They are highly feared and respected by the Pitt's residents, and their word is law.</p>
     </div>
+  </div>
   </body>
 </html>
