--- a/Fallout/world/TEX.html
+++ b/Fallout/world/TEX.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Republic of Texas</h1>
       <p><figure><img src="../img/TEX.webp" style="width:100%"><figcaption>Republic of Texas Seal</figcaption></figure>The Republic of Texas is a powerful and independent nation that has emerged in the aftermath of the Great War. With a focus on agriculture, oil production, and advanced manufacturing, the Republic has become a major economic power in the southern United States.</p>
       <p>Under the leadership of President James Bowie, the Republic has established a strong military force and invested heavily in infrastructure and technology. The Republic's capital is located in the city of Houston, which has been rebuilt as a modern metropolis with skyscrapers, highways, and advanced infrastructure.</p>
@@ -30,6 +31,7 @@
       <p>In terms of infrastructure, the Republic has invested heavily in transportation, building a network of highways, railways, and airfields that connect its major cities and military bases. The Republic also has a robust telecommunications network, including satellite communication and high-speed internet access.</p>
       <p>The Republic's military is well-trained and well-equipped, with a strong focus on defensive capabilities and border security. The Republic's soldiers are equipped with advanced weapons and armor, including power armor, laser weapons, and missile launchers.</p>
       <p>The current leader of the Republic of Texas is President James Bowie, a charismatic and respected leader who has overseen the Republic's continued growth and prosperity. Bowie is a strong believer in the Republic's independence and has emphasized the importance of maintaining a strong military and defensive capabilities.</p>
+    </div>
     </div>
   </body>
 </html>
