--- a/Fallout/world/TEXAN.html
+++ b/Fallout/world/TEXAN.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>Texan Brotherhood</h1>
       <p><figure><img src="../img/BoS.webp" style="width:100%"><figcaption>Texan Brotherhood Crest</figcaption></figure>The Texan Brotherhood is a splinter faction of the Brotherhood of Steel that is located in the former state of Texas. Unlike their counterparts in the West Coast, the Texan Brotherhood has embraced a more flexible and adaptable approach to their mission of preserving and advancing technology.</p>
       <p>The current leader of the Texan Brotherhood is Elder Jackson, a charismatic and visionary leader who has focused on expanding the Brotherhood's influence and working with other factions to rebuild civilization in the region.</p>
@@ -31,5 +32,6 @@
       <p>In terms of military capabilities, the Texan Brotherhood has a highly-trained and well-equipped army that includes a mix of traditional soldiers and power armored knights. They also have a number of advanced weapons and technology at their disposal, including Vertibirds, laser weapons, and robotics.</p>
       <p>The Texan Brotherhood is widely regarded as one of the most powerful factions in the region, and has played a major role in several major conflicts. Despite this, they are generally respected by other factions due to their commitment to preserving technology and rebuilding civilization.</p>
     </div>
+  </div>
   </body>
 </html>
