--- a/Fallout/world/regionindex.html
+++ b/Fallout/world/regionindex.html
@@ -23,11 +23,12 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>Major Regions</h1>
       <p><a class="pipboy" href="CAP.html">The Capital Wasteland</a></p>
       <p><a class="pipboy" href="COM.html">The Commonwealth</a></p>
       <p><a class="pipboy" href="MOJ.html">The Mojave</a></p>
-
+    </div>
     </div>
   </body>
 </html>
