--- a/Fallout/world/worldindex.html
+++ b/Fallout/world/worldindex.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>Major Nations</h1>
       <p><a class="pipboy" href="NCR.html">The NCR</a></p>
       <p><a class="pipboy" href="MID.html">The Mid-West Brotherhood</a></p>
@@ -36,6 +37,7 @@
       <p><a class="pipboy" href="RON.html">Ronto</a></p>
       <p><a class="pipboy" href="PIT.html">The Pitt</a></p>
       <p><a class="pipboy" href="ISS.html">Issaquah Nation</a></p>
+    </div>
     </div>
   </body>
 </html>
