--- a/Fallout/index.html
+++ b/Fallout/index.html
@@ -11,16 +11,8 @@
     <audio id="myAudio">
       <source src="data/PipStart2.mp3" type="audio/mp3">
     </audio>
-    <div class="buttonpannel">
-      <button type="button" name="button" class="redglow" onclick="location.href='utilities/falloutwiki.html';"></button><span class=buttontext>Database</span>
-      </br>
-      <button type="button" name="button" class="redglow" onclick="location.href='utilities/blank.html';"></button><span class=buttontext>Test Page</span>
-      </br>
-      <button type="button" name="button" class="redglow" onclick="location.href='worldmap.html';"></button><span class=buttontext>World Map</span>
-      </br>
-      <button type="button" name="button" class="redglow" onclick="location.href='localmap.html';"></button><span class=buttontext>Local Map</span>
-      </br>
-      <button type="button" name="button" class="redglow"></button><span class=buttontext>testing</span>
+    <div id="buttonpannel" class="buttonpannel">
+
     </div>
     <div id="date">
       <span id="day"></span>
