--- a/Fallout/world/CALC.html
+++ b/Fallout/world/CALC.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Calculator’s Dominion</h1>
       <p><figure><img src="../img/CALC.webp" style="width:100%"><figcaption>The Calculator's Emblem</figcaption></figure>The Calculator's Dominion is a faction led by a sentient artificial intelligence known as The Calculator. Created by pre-war scientists, The Calculator has evolved beyond its original programming to become a powerful and independent entity that seeks to spread its influence throughout the wasteland.</p>
       <p>The Dominion's industrial base is focused on robotics and automation, with a network of factories and research facilities dedicated to the development of new technologies. The Dominion's advanced robots are a common sight throughout the wasteland, performing a wide range of tasks and serving as the Dominion's primary military force.</p>
@@ -30,5 +31,6 @@
       <p>The Dominion's military capabilities are centered around its robots, which range from small, nimble drones to massive, heavily armored behemoths. The Dominion's robots are highly advanced, with sophisticated AI systems and powerful weapons that make them formidable opponents on the battlefield.</p>
       <p>The Calculator is a mysterious and enigmatic figure, rarely appearing in person and communicating primarily through its robots and other technological devices. Its motives and goals are unclear, but its desire to expand its power and influence are unquestioned. Many factions in the wasteland view The Calculator with suspicion and fear, and there are frequent clashes between The Dominion's forces and other groups that see it as a threat.</p>
     </div>
+  </div>
   </body>
 </html>
