--- a/Fallout/world/CAP.html
+++ b/Fallout/world/CAP.html
@@ -23,11 +23,13 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Capital Wasteland</h1>
       <p><figure style="width:50%"><img src="../img/capwastelandmap.webp" style="width:100%"><figcaption>The Capital Wasteland</figcaption></figure>The Capital Wasteland has seen significant improvements in its infrastructure and overall quality of life. Under the leadership of the Lone Wanderer, the region has become more stable and secure, with various communities banding together to form a loosely united front against the remaining super mutants and other dangers.</p>
       <p>The Lone Wanderer, now a revered figure among the wastelanders, has become the de facto leader of the region, overseeing various initiatives to improve living conditions and rebuild infrastructure. They have established a network of trade routes and alliances with other communities, creating a bustling economy and exchange of goods and services.</p>
       <p>Industrial capacity in the Capital Wasteland has improved as well, with various factories and workshops utilizing the Lone Wanderer's advanced technological knowledge to create new and innovative products. While still reliant on scavenged materials, the region has seen a significant increase in the production of goods and services.</p>
       <p>In terms of military base, the Capital Wasteland has established a militia force composed of various community members and wastelanders, trained and equipped to defend the region from threats both internal and external. The Lone Wanderer has also established alliances with the Brotherhood of Steel and the Railroad, who have set up bases of operation in the region.</p>
     </div>
+  </div>
   </body>
 </html>
