--- a/Fallout/world/COM.html
+++ b/Fallout/world/COM.html
@@ -23,11 +23,13 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Boston Commonwealth</h1>
       <p><figure style="width:50%"><img src="../img/bostonmap.webp" style="width:100%"><figcaption>The Boston Commonwealth</figcaption></figure>The Boston area has undergone significant changes under the leadership of Nora, the Sole Survivor and Director of the Institute. With the Railroad and the Institute having made peace, the region has experienced a new era of cooperation and progress.</p>
       <p>Under Nora's leadership, the Institute has redirected their technological expertise towards improving the lives of the people of the Commonwealth. The region's infrastructure has been significantly upgraded, with new roads, bridges, and buildings constructed using advanced technologies and materials.</p>
       <p>The industrial capacity of the Boston area has also seen a boost, with the Institute's advanced manufacturing capabilities allowing for the production of cutting-edge technologies and weapons. This has helped the region become a major economic powerhouse, with trade routes and partnerships established with other settlements and factions throughout the wasteland.</p>
       <p>In terms of military base, the Institute has become the dominant force in the region, with a highly-trained and well-equipped military force at their disposal. However, they have established alliances with the Minutemen and other factions, allowing for a more cooperative and peaceful approach to maintaining security in the region.</p>
     </div>
+  </div>
   </body>
 </html>
