--- a/Fallout/world/GAM.html
+++ b/Fallout/world/GAM.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>Gammorin's Army</h1>
       <p><figure><img src="../img/GAM.webp" style="width:100%"><figcaption>Gammorin's Army Emblem</figcaption></figure>Gammorin's Army is a faction of super mutants that originated as an offshoot of the Unity, which was created by the Master in California. After the destruction of the Unity, Gammorin, a super mutant who had served as a commander under the Master, took command of the mutant army and led them on a journey eastward.</p>
       <p>In this alternate timeline, Gammorin's Army has established a stronghold in the ruins of Chicago, where they have constructed a massive fortress and a network of underground tunnels. The current leader of Gammorin's Army is Paladin Latham, a former member of the Brotherhood of Steel who took Gammorin's name as his own after defeating him in single combat.</p>
@@ -31,5 +32,6 @@
       <p>In terms of military capabilities, Gammorin's Army has a formidable army of super mutants and mutant animals, which they use to raid and conquer other settlements. They also have a number of advanced weapons and technology, much of which was acquired through raiding Brotherhood of Steel and Enclave outposts.</p>
       <p>Gammorin's Army is widely feared by other factions in the region, due to their strength and willingness to use brutal tactics to achieve their goals. Despite this, they are also seen as a potential ally by some factions, due to their common enemy in the Enclave and the Brotherhood of Steel.</p>
     </div>
+  </div>
   </body>
 </html>
