--- a/Fallout/world/MID.html
+++ b/Fallout/world/MID.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Mid-West Brotherhood</h1>
       <p><figure><img src="../img/BoS.webp" style="width:100%"><figcaption>The Mid-West Brotherhood Emblem</figcaption></figure>The Mid-West Brotherhood is a faction of the Brotherhood of Steel that has established a presence in the Midwestern United States. Led by a Council of Elders, the Mid-West Brotherhood is dedicated to preserving technology and knowledge, and to protecting the people of the wasteland from the dangers of the post-apocalyptic world.</p>
       <p>The Brotherhood's industrial base is centered around manufacturing and repair of advanced technology. They possess advanced equipment and knowledge that allows them to repair and maintain high-tech equipment found throughout the wasteland. They also possess the ability to create new technology, but their capabilities in this area are limited compared to the other factions.</p>
@@ -30,5 +31,6 @@
       <p>The Mid-West Brotherhood's military forces are composed of highly-trained soldiers who are equipped with advanced technology, such as energy weapons, power armor, and robotic support units. They are known for their strict adherence to the Brotherhood's code of conduct and their commitment to preserving technology and knowledge.</p>
       <p>The Council of Elders is the governing body of the Mid-West Brotherhood, and is responsible for making important decisions and setting policies for the faction. They are highly respected by the Brotherhood's members and are known for their wisdom and foresight.</p>
     </div>
+  </div>
   </body>
 </html>
