--- a/Fallout/world/NCR.html
+++ b/Fallout/world/NCR.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The NCR</h1>
       <p><figure><img src="../img/NCRlogo.webp" style="width:100%"><figcaption>NCR Seal</figcaption></figure>The NCR is a large, democratic republic that controls much of the western United States, stretching from California to Nevada, Arizona, and parts of Oregon and Washington. Its capital is located in the former city of Los Angeles, which has been rebuilt as a sprawling metropolis with skyscrapers, highways, and advanced infrastructure.</p>
       <p>Under the leadership of President Tandi's descendants, the NCR has become a prosperous and powerful nation, with a population of several million people and a diverse economy that includes agriculture, manufacturing, and high-tech industries.</p>
@@ -31,5 +32,6 @@
       <p>In terms of infrastructure, the NCR has invested heavily in transportation, building a network of highways, railways, and airfields that connect its major cities and military bases. The NCR also has a robust telecommunications network, including satellite communication and high-speed internet access.
       The current leader of the NCR is President Aaron Kimball, a charismatic and popular politician who has overseen the republic's continued expansion and prosperity. Kimball is a strong supporter of the NCR military and has emphasized the importance of maintaining the republic's security in an increasingly dangerous and chaotic wasteland.</p>
     </div>
+  </div>
   </body>
 </html>
