--- a/Fallout/world/NEWCAN.html
+++ b/Fallout/world/NEWCAN.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>New Cannan</h1>
       <p><figure><img src="../img/New_Canaan.webp" style="width:100%"><figcaption>New Cannan Flag</figcaption></figure>The Republic of Texas is a powerful and independent nation that has emerged in the aftermath of the Great War. With a focus on agriculture, oil production, and advanced manufacturing, the Republic has become a major economic power in the southern United States.</p>
       <p>Under the leadership of President James Bowie, the Republic has established a strong military force and invested heavily in infrastructure and technology. The Republic's capital is located in the city of Houston, which has been rebuilt as a modern metropolis with skyscrapers, highways, and advanced infrastructure.</p>
@@ -31,5 +32,6 @@
       <p>The Republic's military is well-trained and well-equipped, with a strong focus on defensive capabilities and border security. The Republic's soldiers are equipped with advanced weapons and armor, including power armor, laser weapons, and missile launchers.</p>
       <p>The current leader of the Republic of Texas is President James Bowie, a charismatic and respected leader who has overseen the Republic's continued growth and prosperity. Bowie is a strong believer in the Republic's independence and has emphasized the importance of maintaining a strong military and defensive capabilities.</p>
     </div>
+  </div>
   </body>
 </html>
