--- a/Fallout/world/REA.html
+++ b/Fallout/world/REA.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Reaver Movment</h1>
       <p><figure><img src="../img/REA.webp" style="width:100%"><figcaption>The Reaver Symbol</figcaption></figure>The Reaver Movement is a faction located in the northeastern region of the former United States. They are a group of survivors who banded together in the aftermath of the Great War, with a goal of creating a new society based on their own principles. The Reaver Movement is led by a charismatic leader known as the Reaver, whose real name is unknown.</p>
       <p>The Reaver Movement's industrial base is centered around scavenging and repurposing technology. They have developed an extensive network of scouts and scavengers who explore the ruins of the old world in search of usable technology and resources. They have also developed their own unique technology, often incorporating parts from salvaged pre-war equipment into their own inventions.</p>
@@ -30,5 +31,6 @@
       <p>The Reaver Movement's military capabilities are based on a combination of technological superiority and strategic flexibility. They have a highly trained group of soldiers who are equipped with advanced weapons and armor, as well as a small but highly skilled force of scouts and snipers who provide valuable intelligence on their enemies. They are also known for their use of unconventional tactics, such as traps and ambushes, which they use to great effect in battle.</p>
       <p>Under the Reaver's leadership, the Reaver Movement has become a respected faction in the region, with many smaller settlements looking to them for protection and guidance. While they may not have the same level of resources as some of the larger factions, their technological expertise and strategic thinking have allowed them to carve out a place for themselves in the wasteland.</p>
     </div>
+  </div>
   </body>
 </html>
