--- a/Fallout/world/RON.html
+++ b/Fallout/world/RON.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>Ronto</h1>
       <p><figure><img src="../img/ronto.webp" style="width:100%"><figcaption>Ronto Emblem</figcaption></figure>Ronto is a faction located in the former Canadian province of Ontario. Led by a High Council of elected representatives, Ronto is a democratic nation that is dedicated to rebuilding and improving the lives of its citizens in the aftermath of the nuclear apocalypse.</p>
       <p>Ronto's industrial base is focused on agriculture and resource extraction. They have a robust farming industry and control many mines and oil fields. They also possess advanced manufacturing capabilities, but these are limited compared to the other factions.</p>
@@ -31,5 +32,6 @@
       <p>The High Council is the governing body of Ronto, and is responsible for making important decisions and setting policies for the faction. They are highly respected by the citizens of Ronto and are known for their commitment to democracy and the well-being of their people.</p>
       <p>Overall, Ronto is a stable and prosperous nation that commands respect throughout the wasteland. While they may not have the military might of some of the other factions, their commitment to democracy and rebuilding society makes them a valuable ally for any group that shares their values.</p>
     </div>
+  </div>
   </body>
 </html>
