--- a/Fallout/world/SHI.html
+++ b/Fallout/world/SHI.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>The Shi</h1>
       <p><figure><img src="../img/SHI.webp" style="width:100%"><figcaption>The Shi's Flag</figcaption></figure>The Shi are a faction of descendants of Chinese submarine crew members who survived the Great War by taking shelter in a nuclear submarine that was submerged off the coast of San Francisco. Over time, the crew members and their families formed a new community, blending elements of Chinese and American culture into a unique and thriving civilization.</p>
       <p>Under the leadership of Emperor Lao, the Shi have established a powerful industrial base that is focused on advanced manufacturing, robotics, and biotechnology. The Shi have developed a number of groundbreaking technologies, including advanced robots and medical treatments, that have helped to make them a major player in the wasteland.</p>
@@ -30,5 +31,6 @@
       <p>In terms of military capabilities, the Shi maintain a strong and disciplined army, equipped with advanced weapons and armor. The Shi also have a formidable navy, composed of modified submarines and other vessels that patrol the coast and protect their shipping lanes.</p>
       <p>Emperor Lao is a visionary leader who has overseen the Shi's continued growth and prosperity. Lao is deeply committed to the ideals of technological progress and cultural exchange, and has worked tirelessly to promote these values both within the Shi and in their interactions with other factions in the wasteland.</p>
     </div>
+  </div>
   </body>
 </html>
