--- a/Fallout/world/factionindex.html
+++ b/Fallout/world/factionindex.html
@@ -23,6 +23,7 @@
     </div>
     <script src="../clock.js"></script>
     <div class="screen">
+      <div class="contentwindow">
       <h1>Major Factions</h1>
       <p><a class="pipboy" href="ENC.html">The Enclave</a></p>
       <p><a class="pipboy" href="LEG.html">Cesar's Legion</a></p>
@@ -33,6 +34,7 @@
       <p><a class="pipboy" href="ATI.html">Attis Army</a></p>
       <p><a class="pipboy" href="TEXAN.html">Texan Brotherhood</a></p>
       <p><a class="pipboy" href="GAM.html">Gammorin's Army</a></p>
+    </div>
     </div>
   </body>
 </html>
