--- a/Fallout/factions/USSA.html
+++ b/Fallout/factions/USSA.html
@@ -26,10 +26,11 @@
     </div>
     <script src="../clock.js"></script>
     <img class="pagebg" src="../img/pipboy2000.webp"></img>
-    <div id="navcontainer" class="navcontainer">
-      <script src="../pipnav2.js"></script>
-    </div>
+    
     <div class="screen">
+      <div id="navcontainer" class="navcontainer">
+        <script src="../pipnav2.js"></script>
+      </div>
       <div class="contentwindow">
         <h1>Overview</h1>
         <figure>
@@ -75,7 +76,7 @@
         <p>However, the Space Pioneers are not without their enemies. Some see their technological advances as a threat, and fear that they could become too powerful and dominant. Others see them as naive and unrealistic, and believe that their idealism will ultimately lead to failure and disappointment. The Space Pioneers must navigate these challenges and conflicts as they work to rebuild the space program and create a new future for humanity.</p>
 
         <h1>Organization and Culture</h1>
-        <p>The Space Pioneers have one of the most clean cut and formal organization systems of any post-war organization. The group is overseen by the Director of the Johnson Space Center, who is analogous to a king though their power is limited by the Mission Chater. Beneath them are the Facility Directors, a small group consisting of:</p>
+        <p>The Space Pioneers have one of the most clean cut and formal organization systems of any post-war organization. They have no real cultural divisions thanks to the strict upbringing and education provided ot their children and screening ouf outsiders ensuring that all members are laser focused on the Mission. Those who cannot cut it are kicked out. The Pioneers are overseen by the Director of the Johnson Space Center, who is analogous to a king though their power is limited by the Mission Chater. Beneath them are the Facility Directors, a small group consisting of:</p>
         <ul>
           <li aria-level="1"><strong>Director of Life Support </strong>- Oversees the personnel’s living arrangements and daily needs.</li>
           <li aria-level="1"><strong>Director of Research </strong>- Oversees all R&amp;D operations.</li>
@@ -110,6 +111,16 @@
         <p>Typically speaking, all children living in the Center hold the rank of Cadet, as most of their recruits come form within (Individuals who do not wish to contribute to the Mission are typically sent away, and almost always come back within a month willing to work.), but is also granted to outsiders who are willing to assist with the Mission.</p>
         <p>Cadets are educated formally in something akin to pre-war schooling, then transferred to an apprenticeship, where younger members are paired with experienced mentors who guide them through whichever Department they find appealing, or were assigned to.</p>
         <p>The Space Pioneers' culture is one of curiosity and exploration. Members are united by their passion for space and their belief that humanity's future lies beyond the confines of Earth. They are dedicated to pushing the boundaries of human knowledge and technology, despite the apparent impossibility of their Mission.</p>
+        <h1>Leader</h1>
+        <figure style="width: 25%; height:auto; float: left;">
+          <img width="100%" height="100% "src="../img/DirHammer.webp" alt="Johnson Space Center">
+          <figcaption>Director Hammer</figcaption>
+        </figure>
+        <p>The current leader of the Space Pioneers is Director Mike Hammer, a rather controvercial leader whose stances and opinions on the Mission are solid, but has some rather odd domestic policies. They won their chair due to their scientific proweress and favors owed by the other directors, with the People's Vote being against him. It was a narrow election of 5 to 4, and even three years into his 10 year term Director Hammer remains on shaky and controvercial ground.</p>
+        <p>He has repeatedly patishioned the Board to begin taking controll of the land surrounding the Johnson Space Center inorder to expand and construct new facilities. He has reallocated resources from certian projects many see as Mission Critical to infrastructure projects most see as unnessisary. He was once overheard saying he does not believe the stations stockpiles are intact and they should turn their attention to more Earthly matters. He's attempted to establish contact and positive relations with the Daughters of Athena, an odd cult in the far northern badlands with seemingly nothing to offer the Pioneers other than millitary assistance.</p>
+        <p>Very few of the Pioneers support or are happy with those decisions, opinions, and operations. Those who are are only loosly supportive of Director Hammer. He has done some important work. He successfuly revitalised the Pioneer's robotics program, allowing for the repair and mantance of their slowly crumbling robotic labor force after 30 years of intermitant neglect. He was able to obtain long range communications technology from the Texas Brotherhood of Steel through the nogotiation of a non-agression pact. His "Wasteland Transport Solutions" venture which gives some of the Badlands factions access to air transport on occasion and within reason ahs greatly improved the Pioneer's reputation with the Badlands other inhabtants.</p>
+        <p>Yet this is not enough. In short, he is highly unlikly to be relected. Many accuse him of being a Technocrat plant.</p>
+
         <h1>Headquarters</h1>
         <figure style="width: 50%; height:auto;">
           <img width="100%" height="100% "src="../img/JSC.webp" alt="Johnson Space Center">
@@ -120,8 +131,47 @@
       	<p>The facility functions as a well regulated city, home to nearly 8,000 individuals, and containing the entity of the Pioneer's operations. Save of course for small temporary outposts for study and/or salvage within the badlands, and their few permanent postings at communal wasteland trade hubs. It is therefore key to the Pioneer's operations, their first and last stronghold.</p>
 
         <h1>Unique Assets</h1>
-
-        <h2></h2>
+          <h2>AH-77 “Airwolf”</h2>
+            <figure class="left" style="width: 50%; height:auto;">
+              <img width="100%" height="100% "src="../img/airwolf.webp" alt="AH-77 in Flight">
+              <figcaption>AH-77 Conceptual Render</figcaption>
+            </figure>
+            <p>The AH-77 “Airwolf” is a multi-purpose variable-frame quad-winged aircraft used by the Space Pioneers primarily for utility, though is armed and quite capable as an attack helicopter. It greatly resembles a dragonfly, with four large wings that can be repositioned for different purposes including folding for storage, high-speed mode, low-speed mode, and a hover configuration.</p>
+            <p>The Airwolf was designed in 2063 by Dr. Marcus Orion. He designed the Airwolf as part of a research project for the United States government to explore the potential for human colonization on Mars. The name Airwolf was intended to evoke images of a free and powerful beast, capable of going where it pleased. The Airwolf was included in the Mars Shot mission plans to test the design on Mars, but the Great War occurred before the mission could launch.</p>
+            <p>After the Great War, the Space Pioneers discovered the Airwolf in an abandoned government facility in the ruins of Houston. Recognizing its potential as a highly advanced aircraft, they undertook the difficult task of repairing and retrofitting it for use in the wasteland. The Space Pioneers made several modifications to the original Airwolf design, including upgrading its weapons systems and adding advanced sensors for navigating the dangerous wasteland. The redesign was completed in the year 2287.</p>
+            <p>The Airwolf is a highly maneuverable aircraft that can fly at high speeds and hover in place. It is armed with laser cannons and rocket launchers, making it a formidable weapon in combat. Its retro-futuristic design is meant to evoke the Space Pioneers' vision of a future where humanity has mastered both space and earth.</p>
+            <p>The Space Pioneers use the Airwolf for a variety of missions, including reconnaissance, transportation, and combat. Its ability to fly at high altitudes and navigate difficult terrain makes it especially useful for exploring the ruins of old cities and other hard-to-reach locations. The Airwolf is also sometimes used as a symbol of the Space Pioneers' aspirations for a better future, as it represents the potential for human ingenuity and innovation to overcome even the most difficult challenges.</p>
+          <h2>Mars Racer</h2>
+          <figure style="width: 50%; height:auto;">
+            <img width="100%" height="100% "src="../img/buggy.webp" alt="Mars Racer">
+            <figcaption>A Mars Racer</figcaption>
+          </figure>
+            <p>The Mars Racer is a manned rover designed for use on Mars. Its smooth, curved lines and brilliant chrome finish evoke a classic USSA feeling, calling back to the many vehicles of the Space Race and Sea of Tranquility Conflict. It was designed to carry 4 people and a quarter ton of cargo, serving primarily as a means of quick travel for collecting samples or checking remote equipment. To this end, it is one of the fastest and most agile vehicles ever built.</p>
+            <p>The origins of the Mars Racer are shrouded in mystery. Some say it was built by a team of pre-war engineers who were obsessed with speed and sleek design. Others claim that it was the creation of a lone mechanic who spent decades perfecting every detail. Whatever its origins once it was mass produced by the Space Pioneers, the Mars Racer quickly became the stuff of legend, a symbol of speed and freedom in a harsh and unforgiving world.</p>
+            <p>Unlike most of their equipment, the Pioneers sell the Mars Racer (but not the fusion cores which power it) to anyone who can afford it. There are maybe 80 of the buggies total, with under half being in the Pioneer’s hands. They tend to last quite a while but their advanced technology is beyond the capacity of most wasters to repair.</p>
+            <p>As the vehicle isn’t suited for trade due to limited cargo space and an abysmal towing capacity it is primarily used by adventurers, scouts, and wealthy travelers. The Pioneers themselves use them almost exclusively for transporting VIPs and securing small salvage items, data, or transporting messages they do not wish to broadcast over radio.</p>
+            <p>Despite the advantages the Mars Racer has, most people who can afford to own and operate a vehicle much prefer to repair an old Chrysalis Highwayman due to the greater speed on roads and frankly ludicrous amounts of cargo space.</p>
+          <h2>Astro-Armor</h2>
+            <figure class="left" style="width: 33%; height:auto;">
+              <img width="100%" height="100% "src="../img/astroarmor.webp" alt="AH-77 in Flight">
+              <figcaption>Astro-Armor EVA Suit</figcaption>
+            </figure>
+            <p>Astro-Armor is a hard-body armored spacesuit created for the Mars Shot Project inhouse by the USSA with assistance from Cambridge Polymer Labs, LLC. The suit was designed as armor first and a space suit second given the challenges of space travel and the US Gov’s refusal to allow another asteronaught to be taken by the Zetans (See <a href="https://fallout.fandom.com/wiki/Clarabella_7">Clarabella 7 Incident</a>, ref. Colonel<a href="https://fallout.fandom.com/wiki/Hartigan"> Hartigan</a>.) meant that any mission would need to be armed and protected.</p>
+            <p>The Astro-Armor is functionally equivalent to the US Army’s standard issue combat armor in terms of protection. It features an integrated environment suit capable of protecting its user from all threats biological, chemical, and radiological as well as providing up to 4 days of breathable oxygen, and 7 days of water via liquid recycling. The helmet’s visor is both bulletproof and serves as a screen for projecting an integrated pipboy’s display onto when required.</p>
+            <p>The Astro-Armor comes with mounting hardware to attach a jet pack, extended oxygen supply, or other modular backpack based systems. It features integrated gravidic repulsors (the same family as those in the eyebot family of robots) which while incapable of allowing the user to fly or levitate on their own, can be used for maneuvering in vacuum, minimizing the impact of a fall, and support the suit’s mass for the user.</p>
+            <p>The Pioneers use Astro-Armor as their go-to protective suit for all "away missions". It is a formidable set of armor, rendering them immune to most of the dangers they are likely to encounter. The Pioneer's rangers never suffer from heatstroke or hypothermia. They are almost never dehydrated, nor can they become lost which ensures they can resupply efficiently in the field.</p>
+          	<p>The primary drawback to the suits is their expence. Both in manufacture and upkeep. There are very few suits remaining which make use of their original pip-boy system, most have had the system replaced with a less robust post-war computer system (Often called the Mehboy in a jovial semi-derogatory fashion), and few people believe the suits would withstand the vacuum of space for long. Their greatest weakness is most of the suits Nucleostrictive Lining has worn off and the Pioneers cannot manufacture replacement coatings. Consequently most suits do not receive power from the sun, and are instead powered by a bank of energy cells on the belt, which are depleted fairly quickly if one uses any of the suits advanced systems. A few suits have been retrofitted with a fusion core, solving this issue, but these are reserved for higher ranking officers and critical multi-day missions.</p>
+          	<p>Regardless of its faults Astro-Armor is more than adequate as an armored hazmat suit within the Badlands.</p>
+          <h2>Astro-Armor Mk. II</h2>
+            <figure style="width: 33%; height:auto;">
+              <img width="100%" height="100% "src="../img/astroarmor2.webp" alt="AH-77 in Flight">
+              <figcaption>Astro-Armor Mk. II Powered Armor Suit</figcaption>
+            </figure>
+            <p>The Astro-Armor Mk. II is a type of light power armor based on the Mars 2070 “Astro-Armor” EVA Suit, but with a number of modifications made to increase its effectiveness in the harsh conditions of the wasteland. It is designed to use the T-45c frame, due to the Pioneers having several suits available at the dawn of the post-war world which they were able to reverse engineer. At its core it is a suit of Astro-Armor with the powered exoskeleton wrapped around it.</p>
+            <p>The primary differences from the Astro-Armor EVA Suit is the exoskeleton, along with additional plating and reinforced joints to better withstand damage from debris and enemy fire. The suit remains fully sealed and retains all life support equipment, making radiation, pollutants, toxins, and all other such hazards safe for its users, provided the suit remains unbreached.</p>
+            <p>The Astro-Armor Mk. II integrates the base suit’s jetpack system for improved mobility. The suit is far too heavy to fly with such systems which renders the jetpack more of a “jump pack” which allows the user to ascend vertically 30m in a single bound, and make 80m as a horizontal leap if several well timed burns are used in tandem with a running start.</p>
+            <p>The suits have been modified with additional systems to enhance its performance in the wasteland. These include a built-in Geiger counter and atmospheric sensors to warn the wearer of potential hazards, as well as an integrated targeting system with night vision and thermal imaging capabilities for improved visibility in low-light conditions.</p>
+            <p>The armor is powered by the same TX-28 MicroFusion Pack found in T-51b power armor (Which the Pioneers can manufacture in limited quantities) and consequently has a operational time longer than the lifespan of its user. Additionally, the Astro-Armor Mk. II has been designed to be easily repairable and maintainable with common wasteland tools and spare parts, making it an ideal choice for the Space Pioneers' scavenging and exploration missions.</p>
       </div>
     </div>
   </body>
