--- a/Fallout/locations/TexasBadlands.html
+++ b/Fallout/locations/TexasBadlands.html
@@ -19,10 +19,11 @@
     </div>
     <script src="../clock.js"></script>
     <img class="pagebg" src="../img/pipboy2000.webp"></img>
-    <div id="navcontainer" class="navcontainer">
-      <script src="../pipnav2.js"></script>
-    </div>
+    
     <div class="screen">
+      <div id="navcontainer" class="navcontainer">
+        <script src="../pipnav2.js"></script>
+      </div>
       <div class="contentwindow">
         <h1>Overview</h1>
           <figure class="right" style="margin-top: 0; overflow: hidden; width: 40%; height: 60%;"><iframe src="../../maps/FalloutHoustinMap.html#8/30.263/-95.750" style="z-index: 100%" width="99%" height="92%"></iframe><figcaption>The Texas Badlands</figcaption></figure>
@@ -64,8 +65,8 @@
           </ol>
         <h1>Factions</h1>
         <ol style="margin-left: 3%">
-          <li><a href="#">The Bayou Raiders</a></li>
-          <li><a href="#">The Houston Technocrats</a></li>
+          <li><a href="../factions/BayouRaiders.html">The Bayou Raiders</a></li>
+          <li><a href="../factions/Technocrats.html">The Houston Technocrats</a></li>
           <li><a href="#">The Gulf Coast Confederacy</a></li>
           <li><a href="#">The Red Line Cult</a></li>
           <li><a href="#">The Mutant Integration Liberation Front</a></li>
