--- a/Fallout/index.html
+++ b/Fallout/index.html
@@ -22,10 +22,11 @@
     </div>
     <script src="clock.js"></script>
     <img class="pagebg" src="img/pipboy2000.webp"></img>
-    <div id="navcontainer" class="navcontainer">
-      <script src="pipnav.js"></script>
-    </div>
+
     <div class="screen">
+      <div id="navcontainer" class="navcontainer">
+        <script src="pipnav.js"></script>
+      </div>
       <div class="contentwindow">
         <div class="text-container">
 
@@ -66,39 +67,68 @@
     }
 
     setTimeout(function() {
-  const textElement = document.querySelector('.text2');
-  const text = `******************** PIP-OS(R) V7.1.0.8 ******************** \n\nCOPYWRITE  2075  ROBCO(R)\nLOADER  V1.1\nEXEC  VERSION  41.10\n38911  BYTES  FREE\nNO  HOLOTAPE  FOUND\nLOAD  ROM(1):  DEITRIX  303`;
+    const textElement = document.querySelector('.text2');
+    const text = `******************** PIP-OS(R) V7.1.0.8 ******************** \n\nCOPYWRITE  2075  ROBCO(R)\nLOADER  V1.1\nEXEC  VERSION  41.10\n38911  BYTES  FREE\nNO  HOLOTAPE  FOUND\nLOAD  ROM(1):  DEITRIX  303`;
 
-  let index2 = 0; // create new index variable for second script
+    let index2 = 0; // create new index variable for second script
 
-  textElement.innerText = ''; // clear previous text
+    textElement.innerText = ''; // clear previous text
+    const interval = setInterval(() => {
+      textElement.innerText += text.charAt(index2);
+      index2++;
+
+      if (index2 === text.length) {
+        clearInterval(interval);
+        console.log('Next script executed!');
+
+        // Wait for 3 seconds and then hide text2 and show text3
+        setTimeout(() => {
+          textElement.style.display = 'none';
+          const text3Element = document.querySelector('.text3');
+          text3Element.style.display = 'block';
+        }, 3000);
+      }
+    }, 50);
+  }, 6000);
+
+
+
   const interval = setInterval(() => {
-    textElement.innerText += text.charAt(index2);
-    index2++;
-
-    if (index2 === text.length) {
-      clearInterval(interval);
-      console.log('Next script executed!');
-
-      // Wait for 3 seconds and then hide text2 and show text3
-      setTimeout(() => {
-        textElement.style.display = 'none';
-        const text3Element = document.querySelector('.text3');
-        text3Element.style.display = 'block';
-      }, 3000);
-    }
-  }, 50);
-}, 6000);
-
-
-
-const interval = setInterval(() => {
-  scrollText();
-}, scrollSpeed);
-
-
-
-
+    scrollText();
+  }, scrollSpeed);
     </script>
+    <script type="text/javascript" title="Mobile Checker / Adjuster">
+      // Check if the page is being loaded on a mobile device
+      function isMobileDevice() {
+        return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+      }
+
+      // Apply the mobile styles to the page
+      function applyMobileStyles() {
+        // Get the body element and add a class to it
+        var body = document.getElementsByTagName('body')[0];
+        body.classList.add('mobile');
+
+        // Set div.screen to be 100% wide, 100% tall, positioned absolutely at the top left
+        var screen = document.querySelector('.screen');
+        screen.style.width = '100%';
+        screen.style.height = '100%';
+        screen.style.position = 'absolute';
+        screen.style.top = '0';
+        screen.style.left = '0';
+
+        // Hide all elements except for div.screen and its children
+        var elements = document.querySelectorAll('body > *:not(.screen, .screen *)');
+        for (var i = 0; i < elements.length; i++) {
+          elements[i].style.display = 'none';
+        }
+      }
+
+      // Check if the page is being loaded on a mobile device and apply the styles
+      if (isMobileDevice()) {
+        applyMobileStyles();
+      }      
+    </script>
+
   </body>
 </html>
