--- a/Fallout/index.html
+++ b/Fallout/index.html
@@ -117,17 +117,78 @@
         screen.style.top = '0';
         screen.style.left = '0';
 
+        // Set div.navcontainer to be 100% wide, 100% tall, positioned absolutely at the top left
+        var navcontainer = document.querySelector('.navcontainer');
+        navcontainer.style.width = '100%';
+        navcontainer.style.height = '9.5%';
+        navcontainer.style.position = 'absolute';
+        navcontainer.style.top = '0';
+        navcontainer.style.left = '0';
+
+        //Linebreak navbar
+        var navtitle = document.querySelector('.navtitle');
+        var br1 = document.createElement('br');
+        navtitle.parentNode.insertBefore(br1, navtitle.nextSibling);
+
+
+
+        // Set div.contentwindow to be 100% wide, 82% tall, positioned absolutely at the bottom left
+        var contentwindow = document.querySelector('.contentwindow');
+        contentwindow.style.width = '98%';
+        contentwindow.style.height = '90%';
+        contentwindow.style.position = 'absolute';
+        contentwindow.style.bottom = '0';
+        contentwindow.style.left = '2em';
+
+
         // Hide all elements except for div.screen and its children
         var elements = document.querySelectorAll('body > *:not(.screen, .screen *)');
         for (var i = 0; i < elements.length; i++) {
           elements[i].style.display = 'none';
         }
+
+        // Get all elements on the page
+        var elements = document.querySelectorAll('p');
+
+        // Loop through all elements and set the font size
+        for (var i = 0; i < elements.length; i++) {
+          elements[i].style.fontSize = '40px'; // Replace '20px' with the desired font size
+        }
+        var elements = document.querySelectorAll('h1');
+        for (var i = 0; i < elements.length; i++) {
+          elements[i].style.fontSize = '60px'; // Replace '20px' with the desired font size
+        }
+        var elements = document.querySelectorAll('h2');
+        for (var i = 0; i < elements.length; i++) {
+          elements[i].style.fontSize = '50px'; // Replace '20px' with the desired font size
+        }
+        var navtitle = document.querySelector('.navtitle');
+        navtitle.style.marginLeft = 'auto';
+        navtitle.style.marginRight = 'auto';
+        navtitle.style.textAlign = 'center';
+
+        var dropbtn = document.querySelectorAll('.dropbtn');
+        for (var i = 0; i < dropbtn.length; i++) {
+          dropbtn[i].style.fontSize = '60px';
+          if (i > 0) {
+            dropbtn[i].style.marginLeft = '5vw';
+          }
+        }
+
+
+        var navbarsize = document.querySelector('.navcontainer');
+        navbarsize.style.fontSize = '80px'; // Replace '20px' with the desired font size
+
+
+
+
+
       }
 
       // Check if the page is being loaded on a mobile device and apply the styles
       if (isMobileDevice()) {
         applyMobileStyles();
-      }      
+      }
     </script>
 
   </body>
