--- a/Fallout/locations/TexasBadlands.html
+++ b/Fallout/locations/TexasBadlands.html
@@ -19,7 +19,7 @@
     </div>
     <script src="../clock.js"></script>
     <img class="pagebg" src="../img/pipboy2000.webp"></img>
-    
+
     <div class="screen">
       <div id="navcontainer" class="navcontainer">
         <script src="../pipnav2.js"></script>
@@ -67,8 +67,8 @@
         <ol style="margin-left: 3%">
           <li><a href="../factions/BayouRaiders.html">The Bayou Raiders</a></li>
           <li><a href="../factions/Technocrats.html">The Houston Technocrats</a></li>
-          <li><a href="#">The Gulf Coast Confederacy</a></li>
-          <li><a href="#">The Red Line Cult</a></li>
+          <li><a href="../factions/GCC.html">The Gulf Coast Confederacy</a></li>
+          <li><a href="../factions/RedLine.html">The Red Line Cult</a></li>
           <li><a href="#">The Mutant Integration Liberation Front</a></li>
           <li><a href="../factions/USSA.html">The Space Pioneers</a></li>
           <li><a href="#">The Scrap Collectors</a></li>
